--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         body {
             width: 45em;
             margin: 0 auto;
+            color: blue;
             font-family: Tahoma, Verdana, Arial, sans-serif;
         }
     </style>
