--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <h1>This is version 1.0.0</h1>
+    <h1>K8s TP Sidecar Container - NGINX</h1>
+    <h2>This is version 1.0.0</h2>
 </body>
 
 </html>
