--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1>K8s TP Sidecar Container - NGINX</h1>
-    <h2>This is version 1.0.0</h2>
+    <h2>Version 1.0.0</h2>
 </body>
 
 </html>
